--- a/index.html
+++ b/index.html
@@ -146,6 +146,51 @@
 				<div id="resume-content">
 					<section id="experience" class="resume-section">
 						<h3 class="major">Experience</h3>
+
+						<div class="tiles">
+							<div class="experience-item" id="exp-5">
+								<div class="experience-main-content">
+									<div class="left-column">
+										<h4>Data Analytics Intern</h4>
+										<p>iNeuron | Remote</p>
+										<p>July 2024 - Present</p>
+									</div>
+									<div class="right-column">
+										<h4>Expenditure Data Analysis</h4>
+										<p>Working on an expenditure analysis project in the finance sector, utilizing Business Intelligence to optimize cost management for organizations. 
+											Employing Kanban methodology to streamline project workflow and enhance efficiency.</p>
+										<a href="#" class="button toggle-details-btn" onclick="toggleDetails('5'); return false;">Show More</a>
+									</div>
+								</div>
+								<div id="more-5" class="more-details">
+									<h4>Project Details</h4>
+									<p>This project aims to assist management in creating new structures and models to reduce costs through data analysis and mining. Key objectives include cost management, data extraction and transformation, data mining, key metrics identification, relationship analysis, and research-based recommendations.</p>
+									<div class="details-columns">
+										<div class="left-column">
+											<h4>Key Responsibilities</h4>
+											<ul>
+												<li>Perform ETL on the NITI Aayog dataset covering 1980-81 to 2015-16.</li>
+												<li>Analyze data to uncover insights and identify cost impact factors.</li>
+												<li>Develop strategies and models for operational cost reduction.</li>
+												<li>Conduct independent research to support findings and provide actionable recommendations.</li>
+											</ul>
+										</div>
+										<div class="right-column">
+											<h4>Technologies in use</h4>
+											<ul>
+												<li>Python for data processing and analysis</li>
+												<li>Pandas, NumPy for data manipulation</li>
+												<li>Tableau, Power BI for interactive data visualization</li>
+												<li>Alteryx for data preparation and blending</li>
+												<li>SQL (PostgreSQL) for database management</li>
+											</ul>
+										</div>
+									</div>
+									<a href="#" class="button toggle-details-btn" onclick="toggleDetails('5'); return false;">Show Less</a>
+								</div>
+							</div>
+						</div>
+
 						<div class="tiles">
 							<!-- First Experience -->
 							<div class="experience-item" id="exp-1">
@@ -493,7 +538,7 @@
 					From data cleaning and visualization to deep-dive analysis, my work showcases a wide range of
 					skills.<br />
 					I stay up-to-date with the latest tech and methods through continuous online learning.<br />
-					Feel free to explore my work and reach out!</p>
+					Feel free to explore my work and <a href="#contact">reach out</a>!</p>
 			</article>
 
 			<article id="projects" class="project-article">
@@ -546,9 +591,9 @@
 			<article id="projects" class="project-article">
 				<h2><a href="https://gemini-resume-analyzer.streamlit.app/">AI, NLP & Streamlit:<br />
 					Gemini Resume Analyzer</a></h2>
-				<p>If you are a recruter reading about my project, my resume analyer probalbly worked!! <br />
-					It's an AI-powered application that analyzes resumes against job descriptions, providing keyword analysis, 
-				   resume evaluation, and tailored improvement suggestions using Google's Gemini AI model.</p>
+				<p>If you are a recruiter reading about my project, my resume analyzer probably worked!! <br />
+					It's an AI-powered application that analyzes resumes against job descriptions, providing keyword 
+					analysis, resume evaluation, and tailored improvement suggestions using Google's Gemini AI model.</p>
 				<a href="https://gemini-resume-analyzer.streamlit.app/" class="image main"><img
 						src="images/resume-analyzer.jpeg" alt="Resume Analyzer" /></a>
 				<ul class="actions special">
