--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 									<img src="images/power-BI.png" alt="PowerBI">
 									<h4 class="certificate-title">Power BI Essential Training</h4>
 									<div class="certificate-info">
-										<p><strong>Issuer: LinkedIn Learning</strong></p>
+										<p><strong>Issuer: <a href="https://www.linkedin.com/learning/certificates/2d71a16a7e817888d88719658d47b1ae8d7468f65eefa0f7a564cedc84ed3182" target="_blank" rel="noopener noreferrer">LinkedIn Learning</a> </strong></p>
 										<p><strong>Date: March 2024</strong></p>
 										<p><strong>Skills:</strong> Business Intelligence (BI), Data Analysis, Microsoft Power BI</p>
 									</div>
@@ -488,7 +488,8 @@
 									<img src="images/Sap.jpg" alt="Award">
 									<h4 class="certificate-title">SAP Alumni Award</h4>
 									<div class="certificate-info">
-										<p><strong>Issuer: SAP Labs</strong></p>
+										
+										<p><strong>Issuer: <a href="https://www.credly.com/badges/4557e7ac-db1b-460f-b307-1ce0b5b5320e/linked_in_profile" target="_blank" rel="noopener noreferrer">SAP Labs </a></strong></p>
 										<p><strong>Date: October 2023</strong></p>
 										<p><strong>Skills:</strong> Decision Making, Growth Mindset, Influence, Innovation, Problem Solving, Project Management, SAP Product Knowledge, Time Management</p>
 									</div>
@@ -498,10 +499,11 @@
 
 							<div class="certificate">
 								<div class="certificate-inner">
+									
 									<img src="images/HSE-Neuroeconomics.jpg" alt="Discrete Mathematics">
 									<h4 class="certificate-title">Discrete Math and Analyzing Social Graphs</h4>
 									<div class="certificate-info">
-										<p><strong>Issuer:</strong> HSE National Research University (Coursera)</p>
+										<p><strong>Issuer:<a href="https://www.coursera.org/account/accomplishments/verify/WH945HXHSPZ3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" target="_blank" rel="noopener noreferrer"> HSE National Research University (Coursera)</a></strong></p>
 										<p><strong>Date:</strong> May 2021</p>
 										<p><strong>Skills:</strong> Discrete Mathematics, 
 											Graph Theory, 
@@ -540,6 +542,7 @@
 					I stay up-to-date with the latest tech and methods through continuous online learning.<br />
 					Feel free to explore my work and <a href="#contact">reach out</a>!</p>
 			</article>
+			
 
 			<article id="projects" class="project-article">
 
@@ -620,11 +623,13 @@
 			<article id="projects" class="project-article">
 				<header>
 					<h2><a href="#">Data Visualisation:</br>
-						Tableau Dashboards
+						Power BI
 						</a></h2>
 				</header>
-				<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
-				<a href="" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+				<p>
+					To create a dashboard in Power BI for visualizing relevant KPIs and metrics in the dataset provided, 
+					including podcasts and articles, by PwC, to design intuitive visualizations, and implemented interactive features.</p>
+				<a href="" class="image fit"><img src="images/BI.jpeg" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="" class="button">Upcomming</a></li>
 				</ul>
