--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<div class="experience-main-content">
 									<div class="left-column">
 										<h4>Data Analytics Intern</h4>
-										<p>iNeuron | Remote, Unpaid</p>
+										<p>iNeuron | Remote</p>
 										<p>July 2024 - Present</p>
 									</div>
 									<div class="right-column">
