--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
 											<ul>
-												<li>Perform ETL on the NITI Aayog dataset covering 1980-81 to 2015-16.</li>
+												<li>Perform ETL on the NITI Aayog dataset.</li>
 												<li>Analyze data to uncover insights and identify cost impact factors.</li>
 												<li>Develop strategies and models for operational cost reduction.</li>
 												<li>Conduct independent research to support findings and provide actionable recommendations.</li>
