--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data
 						Analytics.
 						I love turning data into actionable insights and crafting solutions that make a difference.</p>
-					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development. I thrive on
+					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development.</br>
+						I have also spend three years of my life as a reseach scholar at Indian Institute of Science Education and Research (TVM, India), building a strong foundational understanding of Biology, Chemisty and Physics. I enjoy integrating this multidisciplinary experience into my data science work. I thrive on
 						tackling tough problems and am always eager to learn something new.</p>
 					
 					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
