--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 
 <head>
-	<title>Gaganjot Kaur Shan - Portfolio</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
+    <title>Gaganjot Kaur Shan - Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
 
-	<meta property="og:description"
-		content="Data Science enthusiast with a passion for Machine Learning and Data Analytics. Explore my portfolio to see how I turn data into actionable insights." />
-	<meta property="og:image" content="https://yourdomain.com/images/profile-pic.jpg" />
+    <meta property="og:title" content="Gaganjot Kaur Shan - Data Science Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gaganjotshan.github.io/Portfolio/" />
+    <meta property="og:description" content="Data Science enthusiast with a passion for Machine Learning and Data Analytics. Explore my portfolio to see how I turn data into actionable insights." />
+    <meta property="og:image" content="https://gaganjotshan.github.io/Portfolio/images/profile-img.png" />
+
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 
@@ -46,8 +50,11 @@
 					<h1>Gaganjot Kaur Shan</h1>
 					<h2>Data Science Engineer</h2>
 				</div>
-				<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a
-						href="https://github.com/gaganjotshan"><br />@GaganjotShan</a>
+				<p>
+					Specializing in Machine Learning, Data Analytics, and Visualization.</br>
+					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI.</br>
+					<a href="https://github.com/gaganjotshan" target="_blank">@GaganjotShan</a>
+				  </p>
 				<ul class="actions">
 			</div>
 			<nav>
