--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta property="og:description" content="Data Science enthusiast with a passion for Machine Learning and Data Analytics. Explore my portfolio to see how I turn data into actionable insights." />
     <meta property="og:image" content="https://gaganjotshan.github.io/Portfolio/images/profile-img.png" />
 
-    <link rel="icon" type="image/png"  href="https://www.flaticon.com/fr/icones-gratuites/cerveau">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+	
 </head>
 
 
