--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
 					<section id="certifications" class="resume-section">
 						<h3 class="major">Certificates and Awards</h3>
 						<div class="certificate-grid">
+
 							<div class="certificate">
 								<div class="certificate-inner">
 									<img src="images/logo-accenture.jpg" alt="Data Analytics Certificate">
@@ -488,6 +489,19 @@
 										<p><strong>Expected Completion: 2024</strong></p>
 										<p><strong>Skills (In Progress):</strong> Data Analysis, Business Intelligence,
 											Data Visualization, Problem-Solving, Client Communication</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="certificate">
+								<div class="certificate-inner">
+									<img src="images/pwc.jpeg" alt="PwC Switzerland Power BI">
+									<h4 class="certificate-title">PwC Switzerland Power BI</h4>
+									<div class="certificate-info">
+										<p><strong>Issuer: Forage</strong></p>
+										<p><strong>Date: July 2024</strong></p>
+										<p><strong>Skills:</strong> Calculating measures, Defining KPIs, Insight and actions, Insights and actions,
+											Power BI, Power BI dashboard, Self-reflection</p>
 									</div>
 								</div>
 							</div>
