--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>
 					Specializing in Machine Learning, Data Analytics, and Visualization.</br>
 					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI.</br>
-					<a href="https://github.com/gaganjotshan" target="_blank">@GaganjotShan</a>
+					<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 				  </p>
 				<ul class="actions">
 			</div>
@@ -83,9 +83,8 @@
 					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development.</br>
 						I have also spend three years of my life as a reseach scholar at Indian Institute of Science
 						Education and Research (TVM, India), building a strong foundational understanding of Biology,
-						Chemisty and Physics. I enjoy integrating this multidisciplinary experience into my data science
-						work. I thrive on
-						tackling tough problems and am always eager to learn something new.</p>
+						Chemisty and Physics before changing my track. I enjoy integrating this multidisciplinary experience into my data science
+						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
 					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
 						trying something new. My goal is to contribute effectively to meaningful projects that make a
@@ -652,7 +651,7 @@
 					<div class="image-container">
 						<img src="images/resume-analyzer.jpeg" alt="Resume Analyzer" class="image main" />
 					</div>
-					<h2><a href="https://gemini-resume-analyzer.streamlit.app/" target="_blank">AI, NLP & Streamlit:
+					<h2><a href="https://github.com/gaganjotshan/resume-ATS" target="_blank">AI, NLP & Streamlit:
 							Gemini Resume Analyzer</a></h2>
 					<p>If you are a recruiter reading about my project, my resume analyzer probably worked!! It's an
 						AI-powered application that analyzes resumes against job descriptions, providing keyword
