--- a/index.html
+++ b/index.html
@@ -642,8 +642,8 @@
 						model training, model evaluation, and model deployment on AWS using services like EC2 and S3.
 					</p>
 					<div class="actions">
-						<a href="https://github.com/gaganjotshan/MLOps-End2End" class="button"
-							target="_blank">Ongoing</a>
+						<a href="http://studentperformance-env.eba-gvwveqmr.us-east-1.elasticbeanstalk.com/" class="button" target="_blank">Live
+							Demo</a>
 					</div>
 				</div>
 
