--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 					<h2>Data Science Engineer</h2>
 				</div>
 				<p>
-					Specializing in Machine Learning, Data Analytics, and Visualization.</br>
-					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI.</br>
+					Focused on Machine Learning, Data Analytics, Visualization, and Predictive Modeling.</br>
+					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI. </br>
+					Working on my expertise in MLOps and LLM fine-tuning</br>
 					<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 				  </p>
 				<ul class="actions">
@@ -83,7 +84,8 @@
 					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development.</br>
 						I have also spend three years of my life as a reseach scholar at Indian Institute of Science
 						Education and Research (TVM, India), building a strong foundational understanding of Biology,
-						Chemisty and Physics before changing my track. I enjoy integrating this multidisciplinary experience into my data science
+						Chemisty and Physics before changing my track. 
+						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
 					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
@@ -162,15 +164,15 @@
 							<div class="experience-item" id="exp-5">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Data Analytics Intern</h4>
+										<h4>Data Science Intern</h4>
 										<p>iNeuron | Remote</p>
 										<p>July 2024 - Present</p>
 									</div>
 									<div class="right-column">
-										<h4>Expenditure Data Analysis</h4>
+										<h4>Rotation 1: Expenditure Data Analysis</h4>
 										<p>Working on an expenditure analysis project in the finance sector, utilizing
 											Business Intelligence to optimize cost management for organizations.
-											Employing Kanban methodology to streamline project workflow and enhance
+											Employing Scrum and Kanban methodologies to streamline project workflow and enhance
 											efficiency.</p>
 										<a href="#" class="button toggle-details-btn"
 											onclick="toggleDetails('5'); return false;">Show More</a>
@@ -179,14 +181,14 @@
 								<div id="more-5" class="more-details">
 									<h4>Project Details</h4>
 									<p>This project aims to assist management in creating new structures and models to
-										reduce costs through data analysis and mining. Key objectives include cost
+										reduce costs through data analysis. Key objectives include cost
 										management, data extraction and transformation, data mining, key metrics
 										identification, relationship analysis, and research-based recommendations.</p>
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
 											<ul>
-												<li>Perform ETL on the NITI Aayog dataset.</li>
+												<li>Perform ETL on the state government financial data.</li>
 												<li>Analyze data to uncover insights and identify cost impact factors.
 												</li>
 												<li>Develop strategies and models for operational cost reduction.</li>
@@ -319,7 +321,7 @@
 							<div class="experience-item" id="exp-3">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Data Science and Mathematics Intern</h4>
+										<h4>Mathematics for Data Science, Trainee</h4>
 										<p>Indian Institute of Space Science and Technology | Thiruvananthapuram, India
 										</p>
 										<p>May 2017 - June 2017</p>
@@ -384,9 +386,10 @@
 										<p>Developed an innovative neural network model to detect synthetic speech and
 											mitigate voice spoofing attacks.</p>
 										<ul>
-											<li>Innovated and optimized the coRNN architecture for synthetic speech
-												detection on ASV spoof 2019 logical attacks database.</li>
-											<li>Significantly boosted model performance by 1.9 percentage points,
+											<li>Implemented coRNN model to effectively detect voice spoofing on 
+												ASV Spoof 2019 logical attacks database.</li>
+											<li>Optimised the architecture by introducing bidirectionality, 
+												boosting model performance by 1.9 percentage points,
 												resulting in a best equal error rate of 6.8%.</li>
 											<li>Assessed the efficacy of the model in mitigating the EVGP through
 												benchmark assessments.</li>
@@ -405,13 +408,14 @@
 												Project</a></p>
 									</div>
 									<div class="right-column">
-										<p>Developed a data-oriented neural network for event detection and causality
-											analysis using Natural Language Processing techniques.</p>
+										<p> Build a neural network integrating Bidirectional GRU 
+											for named-entity recognition, targeting cause and effect relations in text
+											using Natural Language Processing techniques.</p>
 										<ul>
 											<li>Attained an 85% accuracy rate on "SemEval-2010 Task 8" building a
 												data-oriented neural network for event detection.</li>
 											<li>Analyzed, processed, and visualized over 10,000 event-related data
-												points, integrating word embeddings for enhanced performance.</li>
+												points, integrating word embeddings for captured semantic relationships.</li>
 											<li>Engineered a scalable and maintainable codebase, adhering to software
 												engineering best practices.</li>
 										</ul>
@@ -433,14 +437,17 @@
 										<p>2021 - 2023</p>
 									</div>
 									<div class="right-column">
-										<p>Specialized in advanced data science techniques and engineering practices.
+										<p>Specialized in advanced data science techniques and engineering practices.</br>
 										</p>
 										<ul>
 											<li>GPA: 3.62/4</li>
-											<li>Focused on Machine Learning, Big Data Analytics, and Data Engineering
-											</li>
 											<li>Conducted research projects in Voice Spoofing Detection and Event
 												Causality Detection</li>
+											<li>Highlighted Courses: </br> Cloud Computing, Databases, Machine Learning, Data Mining, 
+												Deep Learning, Bayesian Statistical Learning, Semantic Web, Image Processing, 
+												3D and virtual imaging, Mobile application and services, 
+												Security and privacy for big data and cloud
+											</li>
 										</ul>
 									</div>
 								</div>
@@ -462,11 +469,13 @@
 											development.</p>
 										<ul>
 											<li>GPA: 7.95/10</li>
-											<li>Studied core CS subjects including Algorithms, Data Structures, and
-												Software Engineering</li>
 											<li>Participated in coding competitions and developed various software
 												projects
 											</li>
+											<li>Highlighted Courses: </br> Operating System, Design and Analysis of Algorithms, 
+												Digital Communication and Computer Networks, Computer Organisation and Architecture, 
+												Big Data Analytics, Data Warehouse and Data Mining, Information Retrieval, 
+												Genetic Programming</li>
 										</ul>
 									</div>
 								</div>
@@ -604,42 +613,15 @@
 
 			<!-- Projects Section -->
 			<article id="projects" class="project-grid">
-				<div class="project-item">
-					<div class="image-container">
-						<img src="images/housing.jpg" alt="Data Cleaning in SQL" class="image main" />
-					</div>
-					<h2><a href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql"
-							target="_blank">Data Cleaning in SQL</a></h2>
-					<p>In this project, we take raw housing data and transform it in SQL Server to make it more usable
-						for analysis.</p>
-					<div class="actions">
-						<a href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql"
-							class="button" target="_blank">View Project</a>
-					</div>
-				</div>
-
-				<div class="project-item">
-					<div class="image-container">
-						<img src="images/autismawareness.png" alt="Autism Diagnosis" class="image main" />
-					</div>
-					<h2><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis"
-							target="_blank">Data Exploration: Autism Diagnosis</a></h2>
-					<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns and
-						their correlation with behavioral traits.</p>
-					<div class="actions">
-						<a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis" class="button"
-							target="_blank">View Project</a>
-					</div>
-				</div>
 
 				<div class="project-item">
 					<div class="image-container">
 						<img src="images/mlops-stack.jpg" alt="MLOps Pipeline on AWS" class="image main" />
 					</div>
-					<h2><a href="https://github.com/gaganjotshan/MLOps-End2End" target="_blank">MLOps Pipeline on AWS:
-							From Data to Deployment</a></h2>
-					<p>This is an end-to-end machine learning project focusing on data ingestion, data transformation,
-						model training, model evaluation, and model deployment on AWS using services like EC2 and S3.
+					<h2><a href="https://github.com/gaganjotshan/MLOps-End2End" target="_blank">Industry-Standard MLOps:
+						A Practical Showcase</a></h2>
+					<p>This project showcases an industry-standard MLOps pipeline for predicting student performance using a diverse dataset. 
+						It encompasses data ingestion, transformation, model training, evaluation, and deployment on AWS, utilizing services like EC2 and S3 while using modular coding and logging.
 					</p>
 					<div class="actions">
 						<a href="http://studentperformance-env.eba-gvwveqmr.us-east-1.elasticbeanstalk.com/" class="button" target="_blank">Live
@@ -675,6 +657,35 @@
 						<a href="#" class="button" target="_blank">Upcoming</a>
 					</div>
 				</div>
+
+				
+				<div class="project-item">
+					<div class="image-container">
+						<img src="images/autismawareness.png" alt="Autism Diagnosis" class="image main" />
+					</div>
+					<h2><a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis"
+							target="_blank">Data Exploration: Autism Diagnosis</a></h2>
+					<p>Explored phenotypical and fMRI scans data to uncover insights into neurological patterns and
+						their correlation with behavioral traits.</p>
+					<div class="actions">
+						<a href="https://github.com/gaganjotshan/Autism-Spectrum-Disorder-Diagnosis" class="button"
+							target="_blank">View Project</a>
+					</div>
+				</div>
+
+				<div class="project-item">
+					<div class="image-container">
+						<img src="images/housing.jpg" alt="Data Cleaning in SQL" class="image main" />
+					</div>
+					<h2><a href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql"
+							target="_blank">Data Cleaning in SQL</a></h2>
+					<p>To practice as well as showcase my SQL proficiency, I transform raw housing data in SQL Server into a structured, analysis-ready format.</p>
+					<div class="actions">
+						<a href="https://github.com/gaganjotshan/Data-Analytics-Projects/blob/main/Data%20Cleaning%20Queries.sql"
+							class="button" target="_blank">View Project</a>
+					</div>
+				</div>
+
 			</article>
 
 
