--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>
 					Focused on Machine Learning, Data Analytics, Visualization, and Predictive Modeling.</br>
 					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI. </br>
-					Working on my expertise in MLOps and LLM fine-tuning</br>
+					Working on my expertise in MLOps, LLM fine-tuning as well as front-end development.</br>
 					<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 				  </p>
 				<ul class="actions">
