--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 						Analytics.
 						I love turning data into actionable insights and crafting solutions that make a difference.</p>
 					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development.</br>
-						I have also spend three years of my life as a reseach scholar at Indian Institute of Science
+						I have also spend three years of my life as a research scholar at Indian Institute of Science
 						Education and Research (TVM, India), building a strong foundational understanding of Biology,
-						Chemisty and Physics before changing my track. 
+						Chemistry, Physics and Mathematics before changing my track. 
 						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
@@ -179,11 +179,8 @@
 									</div>
 								</div>
 								<div id="more-5" class="more-details">
-									<h4>Project Details</h4>
-									<p>This project aims to assist management in creating new structures and models to
-										reduce costs through data analysis. Key objectives include cost
-										management, data extraction and transformation, data mining, key metrics
-										identification, relationship analysis, and research-based recommendations.</p>
+									<h4>Data Analyst</h4>
+	
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
