--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 					Explore topics like data analytics, machine learning, MLOps, deep learning, NLP, and more.<br />
 					Each project is linked to its GitHub repository, so you can download and experiment with the
 					code if you like.<br />
-					I'm always open to suggestions, correlations, improvements, or even a friendly roast.<br />
+					I'm always open to suggestions, improvements, or even a friendly roast.<br />
 					From data cleaning and visualization to deep-dive analysis, my work showcases a wide range of
 					skills.<br />
 					I stay up-to-date with the latest tech and methods through continuous online learning.<br />
