--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 						It encompasses data ingestion, transformation, model training, evaluation, and deployment on AWS, utilizing services like EC2 and S3 while using modular coding and logging.
 					</p>
 					<div class="actions">
-						<a href="http://studentperformance-env.eba-gvwveqmr.us-east-1.elasticbeanstalk.com/" class="button" target="_blank">Live
+						<a href="https://github.com/gaganjotshan/MLOps-End2End" class="button" target="_blank">Live
 							Demo</a>
 					</div>
 				</div>
