--- a/index.html
+++ b/index.html
@@ -487,12 +487,25 @@
 
 							<div class="certificate">
 								<div class="certificate-inner">
-									<img src="images/logo-accenture.jpg" alt="Data Analytics Certificate">
-									<h4 class="certificate-title">Accenture Data Analytics (Ongoing)</h4>
+									<img src="images/JPMorganChanse.png" alt="Cybersecurity Certificate">
+									<h4 class="certificate-title">Cybersecurity (Ongoing)</h4>
 									<div class="certificate-info">
 										<p><strong>Issuer: Forage</strong></p>
 										<p><strong>Expected Completion: 2024</strong></p>
-										<p><strong>Skills (In Progress):</strong> Data Analysis, Business Intelligence,
+										<p><strong>Skills (In Progress):</strong> Access Control, Application Security Hygiene,
+											 Exploratory Data Analysis, Text-Based ML Models, Web Application Development, Email Security Fundamentals</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="certificate">
+								<div class="certificate-inner">
+									<img src="images/logo-accenture.jpg" alt="Data Analytics Certificate">
+									<h4 class="certificate-title">Accenture Data Analytics</h4>
+									<div class="certificate-info">
+										<p><strong>Issuer: Forage</strong></p>
+										<p><strong>Date: September 2024</strong></p>
+										<p><strong>Skills:</strong> Data Analysis, Business Intelligence,
 											Data Visualization, Problem-Solving, Client Communication</p>
 									</div>
 								</div>
@@ -520,8 +533,8 @@
 										<p><strong>Issuer: Forage</strong></p>
 										<p><strong>Date: April 2024</strong></p>
 										<p><strong>Skills:</strong> Python, Business Understanding, Hypothesis Framing,
-											EDA, Data Visualization, Mathematical Modelling, Model Evaluation, Client
-											Communication, Model Interpretation</p>
+											EDA, Data Visualization, Mathematical Modelling, Model Evaluation, 
+											Client Communication, Model Interpretation</p>
 									</div>
 								</div>
 							</div>
