--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 									<h4 class="certificate-title">Cybersecurity (Ongoing)</h4>
 									<div class="certificate-info">
 										<p><strong>Issuer: Forage</strong></p>
-										<p><strong>Expected Completion: 2024</strong></p>
+										<p><strong>Date: September 2024</strong></p>
 										<p><strong>Skills (In Progress):</strong> Access Control, Application Security Hygiene,
 											 Exploratory Data Analysis, Text-Based ML Models, Web Application Development, Email Security Fundamentals</p>
 									</div>
