--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									</div>
 								</div>
 								<div id="more-5" class="more-details">
-									<h4>Data Analyst</h4>
+									<h4>Data Analytics</h4>
 	
 									<div class="details-columns">
 										<div class="left-column">
@@ -376,7 +376,7 @@
 										<h4>Oscillatory Neural Network for Voice Spoofing Detection</h4>
 										<p>EURECOM</p>
 										<p>September 2022 - February 2023</p>
-										<p><a href="https://www.canva.com/design/DAFaoooWuuk/DEoVidx7jjQZxpb7F5xkJg/view"
+										<p><a href="https://voice-spoofing-detection.my.canva.site/"
 												target="_blank">View Project</a></p>
 									</div>
 									<div class="right-column">
