--- a/index.html
+++ b/index.html
@@ -659,12 +659,12 @@
 					<div class="image-container">
 						<img src="images/BI.jpeg" alt="Power BI" class="image main" />
 					</div>
-					<h2><a href="https://github.com/gaganjotshan/PwC-PowerBI/blob/main/README.md" target="_blank">Data Visualization: Power BI</a></h2>
+					<h2><a href="https://github.com/gaganjotshan/PwC-PowerBI/blob/main/README.md#dashboard-links" target="_blank">Data Visualization: Power BI</a></h2>
 					<p>To create a dashboard in Power BI for visualizing relevant KPIs and metrics in the dataset
 						provided, including podcasts and articles, by PwC, to design intuitive visualizations, and
 						implemented interactive features.</p>
 					<div class="actions">
-						<a href="https://github.com/gaganjotshan/PwC-PowerBI/blob/main/README.md" class="button" target="_blank">View Project</a>
+						<a href="https://github.com/gaganjotshan/PwC-PowerBI/blob/main/README.md#dashboard-links" class="button" target="_blank">View Project</a>
 					</div>
 				</div>
 
