Project:AI-voice-assistant

--- a/index.html
+++ b/index.html
@@ -626,6 +626,20 @@
 
 				<div class="project-item">
 					<div class="image-container">
+						<img src="images/mlops-stack.jpg" alt="AI Voice Assistant" class="image main" />
+					</div>
+					<h2><a href="https://github.com/gaganjotshan/AI-Voice-Assistant-LLM" target="_blank">LLM:
+						AI Voice Assistant with RAG and Mistral</a></h2>
+					<p>This project implements an AI-powered voice assistant for technical support, using speech recognition, natural language processing, and text-to-speech technologies.
+					</p>
+					<div class="actions">
+						<a href="https://github.com/gaganjotshan/AI-Voice-Assistant-LLM" class="button" target="_blank">Ongoing
+						</a>
+					</div>
+				</div>
+
+				<div class="project-item">
+					<div class="image-container">
 						<img src="images/mlops-stack.jpg" alt="MLOps Pipeline on AWS" class="image main" />
 					</div>
 					<h2><a href="https://github.com/gaganjotshan/MLOps-End2End" target="_blank">Industry-Standard MLOps:
