Project:AI-voice-assistant

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 
 				<div class="project-item">
 					<div class="image-container">
-						<img src="images/mlops-stack.jpg" alt="AI Voice Assistant" class="image main" />
+						<img src="images/LLM.png" alt="AI Voice Assistant" class="image main" />
 					</div>
 					<h2><a href="https://github.com/gaganjotshan/AI-Voice-Assistant-LLM" target="_blank">LLM:
 						AI Voice Assistant with RAG and Mistral</a></h2>
