--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gaganjotshan.github.io/Portfolio/" />
     <meta property="og:description" content="Data Science enthusiast with a passion for Machine Learning and Data Analytics. Explore my portfolio to see how I turn data into actionable insights." />
-    <meta property="og:image" content="https://gaganjotshan.github.io/Portfolio/images/profile-img.png" />
+    <meta property="og:image" content="https://gaganjotshan.github.io/Portfolio/images/scientist.png"/>
 
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/scientist.png">
 	
 </head>
 
@@ -52,9 +52,9 @@
 					<h2>Data Science Engineer</h2>
 				</div>
 				<p>
-					Focused on Machine Learning, Data Analytics, Visualization, and Predictive Modeling.</br>
-					Proficient in Python, SQL, TensorFlow, Tableau, and Power BI. </br>
-					Working on my expertise in MLOps, LLM fine-tuning as well as front-end development.</br>
+					Focused on Machine Learning, Data Analytics, Visualization, and applicaiton development.</br>
+					Proficient in Python, SQL, ML frameworks, Tableau, and Power BI. </br>
+					Working on my expertise in MLOps, LLM fine-tuninga and promt engineering.</br>
 					<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 				  </p>
 				<ul class="actions">
