--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 				<div class="inner">
 					<h1>Gaganjot Kaur Shan</h1>
 					<h2>Data Science Engineer</h2>
+					<p>
+						Focused on Machine Learning, Data Analytics, Visualization, and Applicaiton Development.</br>
+						Proficient in Python, SQL, ML frameworks, Tableau, and Power BI. </br>
+						Working on my expertise in MLOps, LLM fine-tuninga and promt engineering.</br>
+						<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
+					</p>
 				</div>
-				<p>
-					Focused on Machine Learning, Data Analytics, Visualization, and applicaiton development.</br>
-					Proficient in Python, SQL, ML frameworks, Tableau, and Power BI. </br>
-					Working on my expertise in MLOps, LLM fine-tuninga and promt engineering.</br>
-					<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
-				  </p>
+
 				<ul class="actions">
 			</div>
 			<nav>
@@ -171,7 +172,7 @@
 									<div class="right-column">
 										<h4>Rotation 1: Expenditure Data Analysis</h4>
 										<p>Working on an expenditure analysis project in the finance sector, utilizing
-											Business Intelligence to optimize cost management for organizations.
+											Business Intelligence to optimize cost management and bulding a machine learning based anomaly detection system.
 											Employing Scrum and Kanban methodologies to streamline project workflow and enhance
 											efficiency.</p>
 										<a href="#" class="button toggle-details-btn"
@@ -185,10 +186,11 @@
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
 											<ul>
-												<li>Perform ETL on the state government financial data.</li>
-												<li>Analyze data to uncover insights and identify cost impact factors.
+												<li>Engineered ETL pipelines using Python and PostgreSQL, improved financial record processing by 5%.
 												</li>
-												<li>Develop strategies and models for operational cost reduction.</li>
+												<li>Constructed interactive Power BI dashboards to visualize KPIs impacting cost management.
+												</li>
+												<li>Building a machine learning based anomaly detection system to monitor irregular patterns.</li>
 												<li>Conduct independent research to support findings and provide
 													actionable recommendations.</li>
 											</ul>
@@ -488,7 +490,7 @@
 							<div class="certificate">
 								<div class="certificate-inner">
 									<img src="images/JPMorganChanse.png" alt="Cybersecurity Certificate">
-									<h4 class="certificate-title">Cybersecurity (Ongoing)</h4>
+									<h4 class="certificate-title">Cybersecurity</h4>
 									<div class="certificate-info">
 										<p><strong>Issuer: Forage</strong></p>
 										<p><strong>Date: September 2024</strong></p>
