--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					<h1>Gaganjot Kaur Shan</h1>
 					<h2>Data Science Engineer</h2>
 					<p>
-						Focused on Machine Learning, Data Analytics, Visualization, and Applicaiton Development.</br>
+						Focused on Data Analytics, Visualization, Machine Learning, and Applicaiton Development.</br>
 						Proficient in Python, SQL, ML frameworks, Tableau, and Power BI. </br>
-						Working on my expertise in MLOps, LLM fine-tuninga and promt engineering.</br>
+						Working on my expertise in MLOps, fine-tuning LLMs and promt engineering.</br>
 						<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 					</p>
 				</div>
