--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
 				<h2 class="major">Hello and Welcome!</h2>
 				<span class="profile image"><img src="images/profile-img.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
-					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Machine Learning and Data
-						Analytics.
+					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Data
+						Analytics and Machine Learning.
 						I love turning data into actionable insights and crafting solutions that make a difference.</p>
-					<p>I’m skilled in Python, TensorFlow, data visualization, and front-end development.</br>
-						I have also spend three years of my life as a research scholar at Indian Institute of Science
-						Education and Research (TVM, India), building a strong foundational understanding of Biology,
-						Chemistry, Physics and Mathematics before changing my track. 
+					<p>I'm proficient in Python, TensorFlow, data visualization, and application development. 
+						My unique background includes three years as a research scholar at the Indian Institute of Science Education and Research (IISER, Trivandrum), 
+						where I built a strong foundation in Biology, Chemistry, Physics, and Mathematics before transitioning to Computer Science. 
 						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
