--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
 
-					<p>When I’m not working, you’ll find me bouldering, gardening, experimenting in the kitchen, or
-						trying something new. My goal is to contribute effectively to meaningful projects that make a
+					<p>My goal is to contribute effectively to meaningful projects that make a
 						positive impact. Take a look around to explore my portfolio and discover how I bring my skills
 						and passion to every endeavor and feel free to check out my <a href="#resume">resume!</a></p>
 					<h2>Skills!</h2>
@@ -169,9 +168,9 @@
 										<p>July 2024 - Present</p>
 									</div>
 									<div class="right-column">
-										<h4>Rotation 1: Expenditure Data Analysis</h4>
-										<p>Working on an expenditure analysis project in the finance sector, utilizing
-											Business Intelligence to optimize cost management and bulding a machine learning based anomaly detection system.
+										<h4>Analytics & ML Solutions Developer </h4>
+										<p>Working on an expenditure analysis project, utilizing Business Intelligence to optimize cost management 
+											and bulding a machine learning based anomaly detection system.
 											Employing Scrum and Kanban methodologies to streamline project workflow and enhance
 											efficiency.</p>
 										<a href="#" class="button toggle-details-btn"
@@ -216,7 +215,7 @@
 							<div class="experience-item" id="exp-1">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Data Science and Security Research Intern</h4>
+										<h4>Python Developer, Security Research Intern </h4>
 										<p>SAP Labs | Mougins, France</p>
 										<p>March 2023 - August 2023</p>
 									</div>
