--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 
 				<div class="project-item">
 					<div class="image-container">
-						<img src="images/BI.jpeg" alt="Power BI" class="image main" />
+						<img src="images/Dashboad.png" alt="Power BI" class="image main" />
 					</div>
 					<h2><a href="https://github.com/gaganjotshan/PwC-PowerBI/blob/main/README.md#dashboard-links" target="_blank">Data Visualization: Power BI</a></h2>
 					<p>To create a dashboard in Power BI for visualizing relevant KPIs and metrics in the dataset
