--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Gaganjot Kaur Shan</h1>
-					<h2>Data Science Engineer</h2>
-					<p>
-						Focused on Data Analytics, Visualization, Machine Learning, and Applicaiton Development.</br>
-						Proficient in Python, SQL, ML frameworks, Tableau, and Power BI. </br>
-						Working on my expertise in MLOps, fine-tuning LLMs and promt engineering.</br>
+					<h2> AI / Data Science Engineer</h2>
+					<p> Focused on Generative and Agentic AI, Machine Learning Modelling, NLP & LLMs, Data Analytics, and Application Development.</br>
+						Proficient in Python, SQL, system optimisation, machine learning frameworks, version control (Git) and cloud platforms (AWS, Azure)</br>
+						Currently working on my expertise in MLOps, fine-tuning LLMs, and prompt engineering.</br>
 						<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
-					</p>
+						</p>
 				</div>
 
 				<ul class="actions">
@@ -79,10 +78,11 @@
 				<h2 class="major">Hello and Welcome!</h2>
 				<span class="profile image"><img src="images/profile-img.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
-					<p>I’m Gaganjot Shan, a Data Science enthusiast with a passion for Data
-						Analytics and Machine Learning.
-						I love turning data into actionable insights and crafting solutions that make a difference.</p>
-					<p>I'm proficient in Python, TensorFlow, data visualization, and application development. 
+					<p> I’m Gaganjot Shan, an AI Engineer with over two years of experience in NLP, large language models, and data-driven application development.
+						I love solving complex problems, turning data into actionable insights and crafting scalable and sustainable solutions that drive efficiency and positive impact.
+						Passionate about environment sustainiability, knowledge sharing and continuous growth</br></p>
+						
+					<p> I'm proficient in Python, machine learning frameworks, system optimization, web development and ethical AI frameworks. 
 						My unique background includes three years as a research scholar at the Indian Institute of Science Education and Research (IISER, Trivandrum), 
 						where I built a strong foundation in Biology, Chemistry, Physics, and Mathematics before transitioning to Computer Science. 
 						I enjoy integrating this multidisciplinary experience into my data science
@@ -123,7 +123,8 @@
 
 						<h3>Languages</h3>
 						<span class="badge">English (C1)</span>
-						<span class="badge">French (A1)</span>
+						<span class="badge">French (A2)</span>
+						<span class="badge">German (A1)</span>
 						<span class="badge">Hindi (C2)</span>
 						<span class="badge">Punjabi (C2)</span>
 
