--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Gaganjot Kaur Shan</h1>
-					<h2> AI / Data Science Engineer</h2>
-					<p> Focused on Generative and Agentic AI, Machine Learning Modelling, NLP & LLMs, Data Analytics, and Application Development.</br>
-						Proficient in Python, SQL, system optimisation, machine learning frameworks, version control (Git) and cloud platforms (AWS, Azure)</br>
+					<h2> AI Engineer</h2>
+					<p> Focused on Machine Learning Modelling, NLP & LLMs, Data Analytics, and Application Development.</br>
+						Proficient in Python, SQL, system optimisation, machine learning frameworks, and cloud platforms (AWS, Azure)</br>
 						Currently working on my expertise in MLOps, fine-tuning LLMs, and prompt engineering.</br>
 						<a href="https://www.linkedin.com/in/gaganjotshan/" target="_blank">@GaganjotShan</a>
 						</p>
