--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
 				<span class="profile image"><img src="images/profile-img.png" alt="Gaganjot Shan" /></span>
 				<div class="intro-content">
 					<p> I’m Gaganjot Shan, an AI Engineer with over two years of experience in NLP, large language models, and data-driven application development.
-						I love solving complex problems, turning data into actionable insights and crafting scalable and sustainable solutions that drive efficiency and positive impact.
-						Passionate about environment sustainiability, knowledge sharing and continuous growth</br></p>
+						I love solving complex problems and crafting scalable and sustainable solutions that drive efficiency and positive impact.
+						I am really passionate about environment sustainiability, knowledge sharing and continuous growth</br></p>
 						
-					<p> I'm proficient in Python, machine learning frameworks, system optimization, web development and ethical AI frameworks. 
-						My unique background includes three years as a research scholar at the Indian Institute of Science Education and Research (IISER, Trivandrum), 
+					<p> My unique background includes three years as a research scholar at the Indian Institute of Science Education and Research (IISER, Trivandrum), 
 						where I built a strong foundation in Biology, Chemistry, Physics, and Mathematics before transitioning to Computer Science. 
 						I enjoy integrating this multidisciplinary experience into my data science
 						work. I thrive on tackling tough problems and am always eager to learn something new.</p>
