--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 						<span class="badge">TensorFlow</span>
 						<span class="badge">PyTorch</span>
 						<span class="badge">Natural Language Processing (NLP)</span>
+						<span class="badge">Generative and Agentic AI</span>
 						<span class="badge">Data Analysis</span>
 						<span class="badge">Predictive Modelling</span>
 						<span class="badge">Statistical Modelling</span>
@@ -116,7 +117,7 @@
 						<span class="badge">Tableau</span>
 						<span class="badge">Docker</span>
 						<span class="badge">Postman</span>
-						<span class="badge">Git & Version Control</span>
+						<span class="badge">Git</span>
 						<span class="badge">Kubernetes</span>
 						<span class="badge">Cloud Platforms (AWS)</span>
 
