--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 							<div class="experience-item" id="exp-5">
 								<div class="experience-main-content">
 									<div class="left-column">
-										<h4>Data Science Intern</h4>
+										<h4>Machine Learning Engineer</h4>
 										<p>iNeuron | Remote</p>
-										<p>July 2024 - Present</p>
+										<p>July 2024 - Mar 2024</p>
 									</div>
 									<div class="right-column">
 										<h4>Analytics & ML Solutions Developer </h4>
@@ -179,7 +179,7 @@
 									</div>
 								</div>
 								<div id="more-5" class="more-details">
-									<h4>Data Analytics</h4>
+									<!--<h4>Data Analytics</h4>--->
 	
 									<div class="details-columns">
 										<div class="left-column">
@@ -222,9 +222,7 @@
 									</div>
 									<div class="right-column">
 										<h4>Security in next-gen Analytics</h4>
-										<p>Developed a SAP Fiori (UI5) application that enhances the user experience
-											while interfacing with the distributed ledger-based solutions through REST
-											APIs.
+										<p>	Developed a client-server web interface, integrating distributed ledger solutions via REST APIs
 											This intuitive interface provides a window to secure analytics and an
 											efficient access to cross-company shared data, balancing transparency and
 											traceability.</p>
@@ -284,7 +282,7 @@
 									</div>
 								</div>
 								<div id="more-2" class="more-details">
-									<h4>Python Programmer</h4>
+									<!--<h4>Python Programmer</h4>-->
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
@@ -338,7 +336,7 @@
 									</div>
 								</div>
 								<div id="more-3" class="more-details">
-									<h4>Research Intern</h4>
+									<!--<h4>Research Intern</h4>-->
 									<div class="details-columns">
 										<div class="left-column">
 											<h4>Key Responsibilities</h4>
