--- a/index.html
+++ b/index.html
@@ -423,6 +423,29 @@
 
 					<section id="education" class="resume-section">
 						<h3 class="major">Education</h3>
+
+						<div class="tiles">
+							<div class="education-item">
+								<div class="experience-main-content">
+									<div class="left-column">
+										<h4>Postgraduate </br> Industrial AI and Data Science</h4>
+										<p>Centrale Méditerranée et l'Institut 3IA</p>
+										<p>Nice, France</p>
+										<p>2025 - 2026</p>
+									</div>
+									<div class="right-column">
+										<p>Focus on industrial experience in artificial intelligence and data science engineering practices.</br>
+										</p>
+										<ul>
+											<li>In total 6 months of industrial projects with multiple companies, followed by a 6 months internship.</li>
+											<li>Highlights: </br> Artificial Intelligence, Large Language Models, Quantum Machine Learning, Data Mining, 
+												Deep Learning, Advanced Mathematics, Computer Vision, Ethical and Responsible AI, Big Data Analytics											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div class="tiles">
 							<div class="education-item">
 								<div class="experience-main-content">
